# AULD-NETWORK-CLI

./: main.py  pyproject.toml  router.py  run_tests.py  test_main.py
examples/: building_a_cli.py  example_with_privs.py  network.ps1  router.py
src/auld_network_cli/: __init__.py  __main__.py  cli_args.py  command_types.py  commands.py  exceptions.py  handlers.py  logging_config.py  miscellaneous_types.py  program_constants.py  program_defaults.py  program_logging.py  shell.py  types.py
tests/: test_main.py  test_main_new.py
