[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auld-network-cli"
version = "0.1.0"
description = "A command-line interface for network administration"
readme = "README.md"
requires-python = ">=3.11"
#license = { text = "MIT" }
#authors = [{ name = "AlexLemna", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = ["platformdirs>=4.5.0"]

# [project.optional-dependencies]
# dev = [
#     "pytest>=7.0.0",
#     "pytest-cov>=4.0.0",
#     "black>=22.0.0",
#     "flake8>=5.0.0",
#     "mypy>=1.0.0",
# ]

[project.urls]
Homepage = "https://github.com/AlexLemna/AULD-NETWORK-CLI"
Repository = "https://github.com/AlexLemna/AULD-NETWORK-CLI"
Issues = "https://github.com/AlexLemna/AULD-NETWORK-CLI/issues"

[project.scripts]
auld-network-cli = "auld_network_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
